Changes are as followed 1. Moved the internal css to main.css file 2. added favicon

--- a/Zabiulla_assignment/index.html
+++ b/Zabiulla_assignment/index.html
@@ -8,183 +8,10 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/font-awesome.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="shortcut icon" href="./images/fave_icon.png" type="image/x-icon">
 
     <title>Educate Oversaeas</title>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        .contact {
-            gap: 10px;
-        }
-
-        .contact-section {
-            background-color: rgb(238, 108, 61);
-            width: 50%;
-            border-bottom-left-radius: 50px;
-            border-top: 50px;
-            color: white;
-            gap: 30px;
-            height: 50px;
-        }
-
-        .logo-section {
-            margin: 10px;
-            ;
-            width: 50%;
-        }
-
-        .color-navbar,
-        #navbarCenteredExample {
-            background: rgb(66, 86, 115);
-            opacity: 50%;
-        }
-
-        li a,
-        .description {
-            color: white;
-        }
-
-        li a:hover {
-            color: green;
-        }
-
-        .navbar-with-image {
-            position: relative
-        }
-
-        nav {
-            position: absolute;
-            top: 10px;
-            ;
-        }
-
-        .mission {
-            width: 20%;
-            height: 250px;
-        }
-
-        .mission-vision-values {
-            background: rgb(18, 46, 89);
-
-        }
-
-        .top-header {
-            gap: 5px;
-        }
-
-        .icon-des>span {
-            color: rgb(196, 96, 64);
-            font-weight: bolder;
-            font-size: larger;
-            font-style: italic;
-        }
-
-        .description {
-            text-align: center;
-        }
-
-        .mission-vision-values {
-            gap: 20px;
-        }
-
-        .mission:hover {
-            background: rgb(64, 85, 114);
-        }
-
-        .imag,
-        .logo-section {
-            background: white;
-            height: 70px;
-            width: 70px;
-            border-radius: 50%;
-        }
-
-        .heading {
-            color: rgb(19, 49, 96);
-        }
-
-        .orange,
-        .logo-section {
-            color: rgb(238, 108, 31);
-        }
-
-        .eduaction-description {
-            width: 50%;
-        }
-
-        .eduaction-description span {
-            line-height: 2em;
-
-        }
-
-        .welcome-to-educate {
-            gap: 20px;
-            background: rgb(236, 241, 245);
-        }
-
-        .image-sections {
-            gap: 15px;
-        }
-
-        .white-bg {
-            background: white;
-        }
-
-        .white-bg>span {
-            text-align: center;
-            vertical-align: middle;
-            display: flex;
-            justify-content: center;
-            font-weight: bold;
-        }
-
-        .contact-section-bottom {
-            background: rgb(8, 33, 68);
-            gap: 40px;
-            margin: 20px;
-        }
-
-        .call-us-desc, .footer-details {
-            color: white;
-        }
-
-        .flex {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: nowrap;
-        }
-
-        .map-details, .icons-section {
-            gap: 20px;
-            align-items: center;
-        }
-
-        .logo-section {
-            font-size: 30px;
-        }
-
-        .fa-map-marker {
-            width: 20px;
-            font-size: 26px;
-            padding-top: 8px;
-        }
-
-        .map-details>span {
-            display: block;
-
-        }
-        footer{
-            background: rgb(238, 108, 61);
-            padding:10px;
-        }
-    </style>
 </head>
 
 <body>
