1. Fixed header issue: 2. Fixed the icon circle issue:
Pending:

Need to fix the last Brand icons

--- a/Educate_overseas_landing/index.html
+++ b/Educate_overseas_landing/index.html
@@ -10,16 +10,15 @@
     <link rel="stylesheet" href="./css/font-awesome.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./images/fave_icon.png" type="image/x-icon">
-
     <title>Educate Oversaeas</title>
 </head>
 
 <body>
-    <div class="top-header-section d-flex">
-        <div class="logo-section d-flex float-left justify-content-center">
-            <img src="./images/logo1.png" alt="">
+    <div class="top-header-section d-flex justify-content-between">
+        <div class="logo-section1 d-flex justify-content-end">
+            <img src="./images/logo1.png" alt="" width="266px;" height="50px;">
         </div>
-        <div class="contact-section d-flex justify-content-center float-right align-items-center">
+        <div class="contact-section d-flex justify-content-center align-items-center">
             <div class="contact call-us d-flex align-items-center"><i class="fa fa-phone" aria-hidden="true"></i>
                 <span>7353978611</span>
             </div>
@@ -31,7 +30,7 @@
     <div class="navbar-with-image">
         <nav class="navbar navbar-expand-lg color-navbar">
             <!-- Container wrapper -->
-            <div class="container-fluid">
+            <div class="container-fluid navs">
                 <div class="collapse navbar-collapse justify-content-center" id="navbarCenteredExample">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -72,7 +71,7 @@
     <div class="mission-vision-values d-flex justify-content-center align-items-center text-align-center">
         <div class="mission d-flex flex-column justify-content-center">
             <div class="top-header d-flex justify-content-center align-items-center">
-                <div class="imag d-flex justify-content-center"><img src="./images/about_icon1.png" alt="" width="40%;">
+                <div class="imag d-flex justify-content-center align-items-center"><img src="./images/about_icon1.png" alt="" width="40px;">
                 </div>
                 <div class="icon-des"><span> Mission</span></div>
             </div>
@@ -82,7 +81,7 @@
         </div>
         <div class="mission d-flex flex-column justify-content-center align-items-center text-align-center">
             <div class="top-header d-flex justify-content-center align-items-center">
-                <div class="imag d-flex justify-content-center"><img src="./images/about_icon2.png" alt="" width="40%;">
+                <div class="imag d-flex justify-content-center align-items-center"><img src="./images/about_icon2.png" alt="" width="40px;">
                 </div>
                 <div class="icon-des"><span> VISION</span></div>
             </div>
@@ -92,7 +91,7 @@
         </div>
         <div class="mission d-flex flex-column justify-content-center align-items-center text-align-center">
             <div class="top-header d-flex justify-content-center align-items-center">
-                <div class="imag d-flex justify-content-center"><img src="./images/about_icon3.png" alt="" width="40%;">
+                <div class="imag d-flex justify-content-center align-items-center"><img src="./images/about_icon3.png" alt="" width="40px;" height="40px;">
                 </div>
                 <div class="icon-des"><span> Values</span></div>
             </div>
