--- a/Educate_overseas_landing/index.html
+++ b/Educate_overseas_landing/index.html
@@ -179,7 +179,7 @@
             <div class="call-us-desc"><span>info@educationoversear.in</span></div>
         </div>
         <div class="call-section flex">
-            <div class="flex logo-section"><i class="fa fa-clock"></i></div>
+            <div class="flex logo-section"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
             <div class="call-us orange"><span>Mon - Fri</span></div>
             <div class="call-us-desc"><span>10am to 7pm</span></div>
         </div>
