--- a/Educate_overseas_landing/index.html
+++ b/Educate_overseas_landing/index.html
@@ -197,9 +197,9 @@
             </div>
         </div>
         <div class="d-flex icons-section">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-facebook"></i>
+            <a class="orange" href="http://www.facebook.com"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+           <a class="orange" href="https://www.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> 
+           <a class="orange" href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
         </div>
     </div>
     <footer>
